--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 beautifulsoup4==4.12.3
+graphviz==0.20.3
 ply==3.11
 prompt_toolkit==3.0.43
+python-dotenv==1.0.1
 requests==2.31.0
-graphviz==0.20.3
